Changes in version 0.2 -----------------------------------------------------------------