@@ -1,0 +1,2 @@
+suppressPackageStartupMessages(library(ggplot2))
+qplot(mpg, wt, data = mtcars)
